violating_resources/anthos-service-mesh/traffic-policy/samples/dr-tls-enabled/example_disallowed_tls_mode_disable.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: dr-traffic-tls-disable
  namespace: default
spec:
  host: myservice
  trafficPolicy:
    tls:
      mode: DISABLE
