violating_resources/anthos-service-mesh/traffic-policy/suite.yaml
kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: destinationruletlsenabled
tests:
  - name: destinationruletlsenabled
    template: template.yaml
    constraint: samples/dr-tls-enabled/constraint.yaml
    cases:
      - name: subset-disabled
        object: samples/dr-tls-enabled/example_disallowed_subset_disabled.yaml
        assertions:
          - violations: yes
      - name: all-mode-disable
        object: samples/dr-tls-enabled/example_disallowed_tls_mode_disable.yaml
        assertions:
          - violations: yes
      # TODO (b/211519499): This seems like it should trigger a violation but is not.  Please review.
      # - name: not-specified-in-traffic-policy
      #   object: samples/dr-tls-enabled/example_disallowed_traffic_policy_tls_unspecified.yaml
      #   assertions:
      #     - violations: yes
      # TODO (b/211519499): This seems like it should trigger a violation but is not.  Please review.
      # - name: not-specified-in-subsets
      #   object: samples/dr-tls-enabled/example_disallowed_unspecified_in_subsets.yaml
      #   assertions:
      #     - violations: yes
